added how to use comment in html

--- a/Htmlpages/learn.html
+++ b/Htmlpages/learn.html
@@ -58,12 +58,15 @@
 
 
 
+<h1>how to add comment in html</h1>
+
+<!-- Write your comments here -->
+<!-- Write your comments here -->
+<!-- Write your comments here -->
+<!-- Write your comments here -->
 
 
-
-
-
-
+        shushant add one line
     
 </body>
 </html>
